# TAAC2025

./: .gitignore  README.md  analysis_overview.md  analysis_solutions.md
OnePiece/: architecture_diagram.html  dual_path_item_dnn_analysis.md  feature_engineering_analysis.md
OnePiece/OneRec/: dataparallel.py  dataset.py  deepseek_moe.py  infer.py  main_dist.py  model.py  train_infer.py  utils.py
OnePiece/README/: README.md
OnePiece/code/: generate_predict_set.py  generate_sid.py  main_dist.py  preprocess_data.py  submit_generate_sid.slurm  submit_infer.slurm  submit_train.slurm  submit_train_sid.slurm
OnePiece/docs/: README.md  loss_and_training_strategy_analysis.md  onepiece_vs_baseline_optimization_summary.md  sequence_encoder_analysis.md  sid_prediction_head_analysis.md
baseline_2025/: README.md  README_CN.md  architecture_diagram.html  dataset.py  eval.py  infer.py  main.py  model.py  requirements.txt
baseline_2025/docs/: README.md
baseline_2025/faiss-based-ann/: CMakeLists.txt  main.cc
baseline_2025/faiss-based-ann/resources/: id.u64bin
docs/: README.md  analysis_pdf.md
